--- a/bootstrap首页.html
+++ b/bootstrap首页.html
@@ -31,7 +31,7 @@
        <div class="navbar-inner">
        <div class="container">
            <a class="btn btn-navbar" style="padding: 3px 10px; color: rgb(0, 0, 0);" data-target=".nav-collapse" data-toggle="collapse">菜单栏</a><span></span>
-          <a name="top" class="brand text_bnb_strong bnb_middle" href="#">乐鱼网</a>
+          <a name="top" class="brand text_bnb_strong bnb_middle" href="#">吃鱼网</a>
           <div class="nav-collapse">
               <ul class="ul li nav pull-left" style="margin-right: 0px;" >
                   <li class="divider"></li>
@@ -71,7 +71,7 @@
 <div class="section-block" id="product-features"> 
    <div class="container"> 
         <h2>人才来源</h2> 
-        <p class="text-muted">乐鱼网兼职技术人员来自各大互联网公司，普遍具有多年工作经验，平台严格把控人才入口，确保工作质量和效率。</p> 
+        <p class="text-muted">吃鱼网兼职技术人员来自各大互联网公司，普遍具有多年工作经验，平台严格把控人才入口，确保工作质量和效率。</p> 
        <div class="decorate-line"></div>
        <div class="partner row"> 
             <div class="col-xs-4 col-sm-3 col-md-2"> <img src="img/bai.jpg"> </div> 
@@ -116,7 +116,7 @@
    <div class="section-block" id="customer">
             <div class="container">
                 <h2>担保交易</h2>
-<p class=text-muted>薪酬先支付到乐鱼网，确认完工后，再支付给人才。按需支付，未工作时间无忧退款。如发生纠纷，乐鱼网介入调查仲裁保证服务满意度。</p> 
+<p class=text-muted>薪酬先支付到吃鱼网，确认完工后，再支付给人才。按需支付，未工作时间无忧退款。如发生纠纷，吃鱼网介入调查仲裁保证服务满意度。</p> 
                 <div class="decorate-line"></div>
 <div class="grid">
             <div class="fwb-pay-step">
@@ -124,7 +124,7 @@
                 <div class="fwb-step-txt">
                     <dl class="first" style="margin-left: 230px;">
                         <dt>托管雇佣金</dt>
-                        <dd class="fwb-step-dd-txt">先支付薪酬到乐鱼网,<br>确认完工，满意后再付款</dd>
+                        <dd class="fwb-step-dd-txt">先支付薪酬到吃鱼网,<br>确认完工，满意后再付款</dd>
                     </dl>
                     <dl class="second">
                         <dt>签订合同</dt>
@@ -144,20 +144,20 @@
   <div class="section-block" id="underneath"> 
     <div class="container"> 
         <h2>兼职保障</h2>
-        <p class=text-muted>兼职就选乐鱼网，交易有保障，乐鱼网为您解决交易六大难题，解决您的后顾之忧。</p> 
+        <p class=text-muted>兼职就选吃鱼网，交易有保障，吃鱼网为您解决交易六大难题，解决您的后顾之忧。</p> 
         <div class="decorate-line"></div>
         <div class="banner-bottom-grids">
         <div class="col-md-4 banner-bottom-grid red">
             <img src="img/chilun.png" alt="">
-            <p class=text-muted style="text-align:center;padding:20px 0px;">乐鱼网对需求严格筛选和沟通后再做推荐，保护个人隐私。双方签订兼职合同，技术兼职不必担心需求变化。</p>
+            <p class=text-muted style="text-align:center;padding:20px 0px;">吃鱼网对需求严格筛选和沟通后再做推荐，保护个人隐私。双方签订兼职合同，技术兼职不必担心需求变化。</p>
         </div>
         <div class="col-md-4 banner-bottom-grid">
             <img src="img/1.png" alt="">
-            <p class=text-muted style=" text-align:center;padding:20px 0px;">技术兼职直接和雇主沟通，充分了解所要兼职的内容，线上交易乐鱼网严格把控交易环节，保障兼职权益。 </p>
+            <p class=text-muted style=" text-align:center;padding:20px 0px;">技术兼职直接和雇主沟通，充分了解所要兼职的内容，线上交易吃鱼网严格把控交易环节，保障兼职权益。 </p>
         </div>
         <div class="col-md-4 banner-bottom-grid green">
             <img src="img/niao.png" alt="">
-            <p class=text-muted style="text-align:center;padding:20px 0px;">乐鱼网担保交易，先支付后工作，保证劳动回报。坐班时间双方约定，弹性工作。</p>
+            <p class=text-muted style="text-align:center;padding:20px 0px;">吃鱼网担保交易，先支付后工作，保证劳动回报。坐班时间双方约定，弹性工作。</p>
         </div>
         <div class="clearfix"> </div>
         </div>
@@ -195,7 +195,7 @@
 <div class="span3"> 
 <h4 class="span12">交易保障</h4> 
 <div class="span12">   
-<li class="span6"> <a href="#" target=_blank>乐鱼担保交易</a> </li> 
+<li class="span6"> <a href="#" target=_blank>吃鱼担保交易</a> </li> 
 <li class="span6"> <a href="#" target=_blank>雇主保障</a> </li> 
 </div><div class="span12"> 
 <li class="span6"> <a href="" target=_blank>众包平台</a> </li>  
